[tool.poetry]
name = "semi-supervised-transformer"
version = "0.1.0"
description = ""
authors = ["Arda Can Aras <ardaaras99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = "^2.1.1"
numpy = "^1.26.2"
transformers = "^4.35.2"
wandb = "^0.16.0"
scikit-learn = "^1.3.2"
datasets = "^2.15.0"
vector-vis-graph = { git = "https://github.com/tunakasif/vector-vis-graph.git" }


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
ruff = "^0.1.9"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.ruff]
line-length = 150

[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "I",  # isort
    "UP", # pyupgrade
]

[tool.ruff.lint.extend-per-file-ignores]
"*" = ["S101", "S301", "S311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
